# hackabot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Procfile  README.md  conftest.py  manage.py  pyproject.toml
.claude/skills/deploy/: SKILL.md
.claude/skills/investigate/: SKILL.md
hackabot/: asgi.py  settings.py  urls.py  wsgi.py
hackabot/apps/bot/: admin.py  apps.py  constants.py  images.py  models.py  node_sync.py  stripe_mrr.py  telegram.py  views.py
hackabot/apps/bot/management/commands/: backfill_photo_dates.py  sync_nodes.py
hackabot/apps/bot/migrations/: 0001_initial.py  0002_person_privacy_person_username_x.py  0003_add_onboarded_to_person.py  0004_person_bio.py  0005_node_slug.py  0006_event_last_reminder_sent_at_node_last_poll_sent_at.py  0007_group_last_weekly_summary_sent_at.py  0008_populate_existing_nodes.py  0009_delete_message.py  0010_node_disabled.py  0011_meetupphoto.py  0012_node_event_day_alter_meetupphoto_created.py  0013_node_send_global_invite.py  0014_add_message_id_to_poll.py  0015_group_last_yearly_summary_sent_at.py  0016_node_unlisted.py  0017_poll_is_attendance.py  0018_add_hackapei_node.py  0018_joinrequest.py  0019_joinrequest_admin_message_id_and_more.py  0020_remove_joinrequest_admin_message_id_and_more.py  0021_joinrequest_pending_since.py  0022_groupperson_welcomed.py  0023_joinrequest_product_name.py
hackabot/apps/bot/tests/: conftest.py  test_api.py  test_join_requests.py  test_node_sync.py  test_photos.py  test_telegram_api.py  test_webhooks.py  test_worker.py
hackabot/apps/worker/: apps.py  run.py
(+1 files in other folders)
